src/App.css
    /* CSS HEX
--english-vermillion: #d64e4eff;
--bittersweet: #f27263ff;
--dark-salmon: #f89378ff;
--light-salmon: #fca887ff;
--macaroni-and-cheese: #fdb48cff;
--antique-white: #ffeed6ff;
--apricot: #fdc5acff;
--vivid-tangerine: #fb9c82ff;
--congo-pink: #ff958aff;
--congo-pink-2: #f98477ff;
*/
    /* Color Palettes */
    /* Light Mode */
    
    .App.lightMode {
        --background: #f6f6f4ff;
        --icon: #dadad2ff;
        --red: #EB6F78ff;
        --orange: #f0803cff;
        --menu: #97c3edff;
        --links: #996EC4ff;
        --inverse: #342f37ff;
    }
    
    .App.darkMode {
        --background: #181c3aff;
        --icon: #dadad2ff;
        --red: #e43d56ff;
        --orange: #f06714ff;
        --menu: #223196ff;
        --links: #00d394ff;
        --inverse: #C4C9D4ff;
    }
    /* Google Font Imports */
    
    @import url('https://fonts.googleapis.com/css?family=Oleo+Script&display=swap');
    @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
    .App {
        overflow-x: hidden;
    }
    
    .App-logo {
        height: 40vmin;
        pointer-events: none;
    }
    
    @media (prefers-reduced-motion: no-preference) {
        .App-logo {
            animation: App-logo-spin infinite 20s linear;
        }
    }
    
    .App-header {
        background-color: var(--background);
        min-height: 10vh;
        /*display: flex;*/
        flex-direction: column;
        align-items: center;
        justify-content: center;
        font-size: calc(10px + 2vmin);
    }
    
    .App-link {}
    
    .text {
        color: var(--red);
        -webkit-text-stroke-width: .001em;
        -webkit-text-stroke-color: var(--icon);
    }
    
    @keyframes App-logo-spin {
        from {
            transform: rotate(0deg);
        }
        to {
            transform: rotate(360deg);
        }
    }
    
    .content-wrapper {
        width: 100vw;
        height: 100vh;
        /*position: absolute;
        overflow-x: hidden;
        */
        background-color: var(--background);
    }
    
    .header {
        background-color: var(--background);
        height: 10%;
        width: 100%;
        padding: 1%;
        display: inline-flex;
    }
    
    .owlImage {
        background-color: var(--orange);
        max-height: 10vh;
        border-radius: 50%;
        margin-right: 2%;
    }
    
    @keyframes pulse-black {
        0% {
            transform: translate(-50%, -50%) scale(0.95);
            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
        }
        70% {
            transform: translate(-50%, -50%) scale(1);
            box-shadow: 0 0 0 1em rgba(0, 0, 0, 0);
        }
        100% {
            transform: translate(-50%, -50%) scale(0.95);
            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
        }
    }
    
    .icon {
        display: none;
    }
    
    .mobileNav {
        display: inline;
    }
    
    @media (min-width: 992px) {
        .mobileNav {
            display: none;
        }
        .icon {
            display: block;
            height: 5vh;
            border-radius: 50%;
            background-color: var(--icon);
        }
    }
    
    .lightIcon {
        height: 5vh;
        width: 5vh;
        border-radius: 50%;
        background-color: var(--icon);
    }
    
    .icon:hover {
        background-color: var(--red);
        transform: scale(1.5);
    }
    
    .lightIcon:hover {
        background-color: var(--red);
    }
    
    .brandNav {
        display: contents;
    }
    
    .navClass {
        display: contents;
    }
    
    .linkNav {
        display: inline-block;
        font-size: 15px;
        margin: 2%;
        color: var(--background);
    }
    
    a:hover {
        color: var(--orange);
    }
    /*a:nth-child(1) {
        position: absolute;
        top: 12%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
    
    a:nth-child(2) {
        position: absolute;
        top: 39%;
        left: 86%;
        transform: translate(-50%, -50%);
    }
    
    a:nth-child(3) {
        position: absolute;
        top: 81%;
        left: 74%;
        transform: translate(-50%, -50%);
    }
    
    a:nth-child(4) {
        position: absolute;
        top: 81%;
        left: 26%;
        transform: translate(-50%, -50%);
    }
    
    a:nth-child(5) {
        position: absolute;
        top: 39%;
        left: 14%;
        transform: translate(-50%, -50%);
    }
    */
    
    .nameText {
        font-family: 'Oleo Script';
        font-weight: 700;
        font-size: 2em;
    }
    
    .bg-light {
        background-color: var(--cultured)!important;
    }
    
    .nav-link {
        background-color: var(--mango-tango)!important;
        color: var(--baby-blue-eyes)!important;
    }
    
    .stream-wrapper {
        align-content: center;
        width: 100%;
        height: 80vh;
    }
    
    .twitch-embed {
        width: 100%;
        height: 100%;
    }
    
    .lower-wrapper {
        width: 100%;
        height: 100%;
        display: inline-flex;
        top: 100vh;
        position: absolute;
    }
    
    .about-me-wrapper,
    .schedule-wrapper {
        background-color: rgba(0, 0, 0, 0);
        font-family: 'Rubik';
        font-weight: 800;
        font-size: 7vh;
    }
    
    .info {
        text-align: start;
        height: 100vh;
        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(187, 187, 187));
    }
    
    .card {
        background-color: rgba(0, 0, 0, 0);
        border: 0px!important;
    }
    
    .modeToggle {
        position: fixed;
        top: 2vh;
        right: 0vh;
        transform: translate(-100%, 0%);
    }

